# BitwiseShenanigans

./: .gitignore  .gitmodules  Bitwise.cppm  Bitwise.ixx  BitwiseShenanigans.cpp  CMakeLists.txt  README.md
